--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
+										7300 Everett st<br />
 										Nashville, TN 00000<br />
 										United States
 									</li>
