--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 										7300 Everett st<br />
-										Nashville, TN 00000<br />
+										Arvada CO 80005<br />
 										United States
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										303-808-7185
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">darrell.bare@gmail.com</a>
 									</li>
 								</ul>
 							</div>
