--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Lumen-logo-R.svg" class="image fit thumb"><img src="images/Lumen-logo-R.svg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Senior CDN Operations Engineer</h3>
+								<p>Tested and managed rollout of all new code releases</p>
+								<p>Maintained operational functionality of 20,000+ Linux servers</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
