--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Lumen-logo-R.svg" class="image fit thumb"><img src="images/Lumen-logo-R.svg" alt="" /></a>
-								<h3>Senior CDN Operations Engineer</h3>
+								<h3>Senior CDN Operations Engineer 2016-2023</h3>
 								<p>Tested and managed rollout of all new code releases</p>
 								<p>Maintained operational functionality of 20,000+ Linux servers</p>
+								<p>Tier 3 support for internal and external customers</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
+								<a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a>
+								<h3>Software Solutions Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
