--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<p>Tier 3 support for internal and external customers</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a>
+								<a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" width="400" hieght="500" alt="" /></a>
 								<h3>Software Solutions Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
