--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h2>Ipsum lorem  dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputs tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -50,7 +50,7 @@
 								<p>Tier 3 support for internal and external customers</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" width="400" hieght="500" alt="" /></a>
+								<a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a>
 								<h3>Software Solutions Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
@@ -250,7 +250,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<tbody>
 										<tr>
 											<td>Item One</td>
-											<td>Ante turpis integer aliquet porttitor.</td>
+											<td>Network Engineer.</td>
 											<td>29.99</td>
 										</tr>
 										<tr>
