--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</tr>
 										<tr>
 											<td>Item Two</td>
+											<td colspan="1"></td>
 											<td>Vis ac commodo adipiscing arcu aliquet.</td>
 											<td>19.99</td>
 										</tr>
