--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Work</h2>
-						<div class="row">
+						<div class="column">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Lumen-logo-R.svg" class="image fit thumb"><img src="images/Lumen-logo-R.svg" alt="" /></a>
 								<h3>Senior CDN Operations Engineer 2016-2023</h3>
@@ -46,7 +46,7 @@
 								<p>Maintained operational functionality of 20,000+ Linux servers</p>
 								<p>Tier 3 support for internal and external customers</p>
 							</article>
-							<article class="col-5 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a>
 								<h3>Software Solutions Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
