--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 						<div class="column">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/Lumen-logo-R.svg" class="image fit thumb"><img src="images/Lumen-logo-R.svg" alt="" /></a> -->
-								<h3>Senior CDN Operations Engineer 2016-2023</h3>
+								<h2>Lumen 2016-2023</h2>
+								<h3>Senior CDN Operations Engineer</h3>
 								<p>Tested and managed rollout of all new code releases</p>
 								<p>Maintained operational functionality of 20,000+ Linux servers</p>
 								<p>Tier 3 support for internal and external customers</p>
