--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a> -->
+								<h2>Six Actual Software</h2>
 								<h3>Software Solutions Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
