--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<div class="column">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/Lumen-logo-R.svg" class="image fit thumb"><img src="images/Lumen-logo-R.svg" alt="" /></a> -->
-								<h2>Lumen 2016-2023</h2>
+								<h2>Lumen 2016-Present</h2>
 								<h3>Senior CDN Operations Engineer</h3>
 								<p>Tested and managed rollout of all new code releases</p>
 								<p>Maintained operational functionality of 20,000+ Linux servers</p>
@@ -49,28 +49,32 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a> -->
-								<h2>Six Actual Software</h2>
+								<h2>Six Actual Software 2015-2016</h2>
 								<h3>Software Solutions Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
-								<h3>Tortor metus commodo</h3>
+								<h2>Level 3 Communications 2012-2015</h2>
+								<h3>Operations Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a> -->
-								<h3>Quam neque phasellus</h3>
+								<h2>Readytalk</h2>
+								<h3>Customer Care Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a> -->
-								<h3>Nunc enim commodo aliquet</h3>
+								<h2>Intercall</h2>
+								<h3>Channel Manager</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a> -->
-								<h3>Risus ornare lacinia</h3>
+								<h2>Global Crossing</h2>
+								<h3>Collaboration Sales Engineer</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
