--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Darrell Bare</strong>, a super duper  simple<br />
+					<h1><strong>Darrell Bare</strong> simple<br />
 					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					</h1>
 				</div>
 			</header>
 
