--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Darrell Bare</strong> simple<br />
-					responsive site template freebie<br />
-					</h1>
+					<h1><strong>Darrell Bare</strong></h1>
 				</div>
 			</header>
 
