--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem  dolor aliquam ante commodo<br />
+							<h2>Highly motivated, creative and versatile IT engineer with over 23 years' experience in detail oriented positions.<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputs tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
