--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<h2>Highly motivated, creative and versatile IT engineer with over 23 years' experience in detail oriented positions.<br />
 							</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputs tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Proven track record of delivering on-time, quality and professional results, including managing complex networks and multi-million dollar accounts.  Strengths include troubleshooting, documentation, and communication.</p>
 					</section>
 
 				<!-- Two -->
