--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 								<!-- <a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a> -->
 								<h2>Six Actual Software 2015-2016</h2>
 								<h3>Software Solutions Engineer</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Agile product owner for a "new to the undustry" application</p>
+								<p>Gathered all requirements, wrote user stories and drove them to completion</p>
+								<p>Consulted as a software industry expert and business analyst</p>
+								<p>Managed budge, hours, and burn down for the multi-million dollar project</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
