--- a/index.html
+++ b/index.html
@@ -50,32 +50,58 @@
 								<h3>Software Solutions Engineer</h3>
 								<p>Agile product owner for a "new to the undustry" application</p>
 								<p>Gathered all requirements, wrote user stories and drove them to completion</p>
-								<p>Consulted as a software industry expert and business analyst</p>
 								<p>Managed budge, hours, and burn down for the multi-million dollar project</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
 								<h2>Level 3 Communications 2012-2015</h2>
 								<h3>Operations Engineer</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Led operational integration effors for all collaboarion products into the Level 3 workflows</p>
+								<p>Managed all production traffic for $180M in collaboration revenue</p>
+								<p>Lead Splunk implementation engineer</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a> -->
 								<h2>Readytalk</h2>
 								<h3>Customer Care Engineer</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Telecommunications SME for the company, including internal and external customers</p>
+								<p>Lead technical liason between Readytalk and their telephony vendors</p>
+								<p>Sales engineer for the most technically complex customers and prospects</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a> -->
 								<h2>Intercall</h2>
 								<h3>Channel Manager</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Primary sales representative for 20+ wholesale accounts, totalling $1.2M in annual revenue</p>
+								<p>Performed both hunting and farming for wholesale accounts in the Western US region</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a> -->
 								<h2>Global Crossing</h2>
 								<h3>Collaboration Sales Engineer</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Primary engineering point of contact for all western and central region’s outside sales people</p>
+								<p>Primary engineering point of contact for all western and central region collaboration accounts,
+									totaling more than $50M in annual revenue</p>
+								<p>Attended prospect/review meetings with corporate decision makers and act as the SME for our
+									collaboration products and the collaboration industry as a whole</p>
+								<p>Facilitator of customer technical requests to product and development teams</p>
+								<p>Beta user for all new features of any collaboration product</p>
+								<h3>Collaboration Network Engineer</h3>
+								<p>Primary engineer for our new Pactolus event conferencing system. This new platform integrated
+									TDM, VoIP, SIP, Java, XML, SOAP, and Oracle technologies</p>
+								<p>Responsible for forward looking, revenue generating projects</p>
+								<p>Third level support of all technical staff</p>
+								<p>Re-wrote all testing and implementation procedures, including all technical service documents,
+									method of procedures, and regression test plans</p>
+								<h3>Collaboration Network Operations Technician</h3>
+								<p>Extensive SS7, ISDN, and robbed bit telephony network troubleshooting</p>
+								<p>Tier 3 support of world-wide audio conferencing platforms</p>
+								<p>Tier 3 support of server infrastructure</p>
+									Tier 2 support of telephony switching equipment.
+									Tier 2 support of digital cross connecting platforms.
+									Tier 1 support of switches, routers, and other data equipment.
+									Maintained communications between technical staff and internal/external customers.
+									Provide third level support for escalation to outside vendors.</p>
 							</article>
 						</div>
 					</section>
