--- a/index.html
+++ b/index.html
@@ -93,15 +93,11 @@
 								<p>Third level support of all technical staff</p>
 								<p>Re-wrote all testing and implementation procedures, including all technical service documents,
 									method of procedures, and regression test plans</p>
-								<h3>Collaboration Network Operations Technician</h3>
+								<h3>Network Operations Technician</h3>
 								<p>Extensive SS7, ISDN, and robbed bit telephony network troubleshooting</p>
 								<p>Tier 3 support of world-wide audio conferencing platforms</p>
-								<p>Tier 3 support of server infrastructure</p>
-									Tier 2 support of telephony switching equipment.
-									Tier 2 support of digital cross connecting platforms.
-									Tier 1 support of switches, routers, and other data equipment.
-									Maintained communications between technical staff and internal/external customers.
-									Provide third level support for escalation to outside vendors.</p>
+								<p>Tier 3 support of server and database infrastructure</p>
+								<p>Tier 3 support of telephony switching equipment</p>
 							</article>
 						</div>
 					</section>
