--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a> -->
-								<h2>Readytalk</h2>
+								<h2>Readytalk 2010-2012</h2>
 								<h3>Customer Care Engineer</h3>
 								<p>Telecommunications SME for the company, including internal and external customers</p>
 								<p>Lead technical liason between Readytalk and their telephony vendors</p>
@@ -70,14 +70,14 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a> -->
-								<h2>Intercall</h2>
+								<h2>Intercall 2010-2010</h2>
 								<h3>Channel Manager</h3>
 								<p>Primary sales representative for 20+ wholesale accounts, totalling $1.2M in annual revenue</p>
 								<p>Performed both hunting and farming for wholesale accounts in the Western US region</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a> -->
-								<h2>Global Crossing</h2>
+								<h2>Global Crossing 2000-2010</h2>
 								<h3>Collaboration Sales Engineer</h3>
 								<p>Primary engineering point of contact for all western and central region’s outside sales people</p>
 								<p>Primary engineering point of contact for all western and central region collaboration accounts,
