--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<td>29.99</td>
 										</tr>
 										<tr>
+											<td>Item skills>
+											<td colspan='1'></td>
+											<td>skills skills skills</td>
+											<td>29.99>
+										</tr>
+										<tr>
 											<td>Item Two</td>
 											<td colspan='1'></td>
 											<td>Vis ac commodo adipiscing arcu aliquet.</td>
