--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 						</header>
 						<p>Proven track record of delivering on-time, quality and professional results, including managing complex networks and multi-million dollar accounts.  Strengths include troubleshooting, documentation, and communication.</p>
 					</section>
+				<!-- skills -->
+					<section id="Item skills">
+						<header class="major">
+							<h2>Skills</h2></header>
 
+					</section>
 				<!-- Two -->
 					<section id="two">
 						<div class="column">
