--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<section id="Item skills">
 						<header class="major">
 							<h2>Skills</h2></header>
-
+							<ol>FTP</ol>
 					</section>
 				<!-- Two -->
 					<section id="two">
