--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
 					<section id="Item skills">
 						<header class="major">
 							<h2>Skills</h2></header>
-							<ol>FTP</ol>
+							<ol>Solaris</ol>
+							<ol>Windows</ol>
+							<ol>Mac</ol>
+							<ol>Visio</ol>
+							<ol>Splunk</ol>
+							<ol>SQL</ol>
+							<ol>RegEx</ol>
+							<ol>VoIP</ol>
+							<ol>Sip</ol>
+							<ol>HTTP</ol>
+							<ol>Confluence</ol>
+							<ol>Jira</ol>
+							<ol>Bash</ol>
+							<ol>Python</ol>
+							<ol>IP</ol>
 					</section>
 				<!-- Two -->
 					<section id="two">
