--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<section id="Item skills">
 						<header class="major">
 							<h2>Skills</h2></header>
-							<ol>Solaris</ol>
+							<ui style="list-style-type:square"><ol>Solaris</ol>
 							<ol>Windows</ol>
 							<ol>Mac</ol>
 							<ol>Visio</ol>
@@ -50,7 +50,7 @@
 							<ol>Jira</ol>
 							<ol>Bash</ol>
 							<ol>Python</ol>
-							<ol>IP</ol>
+							<ol>IP</ol></ui>
 					</section>
 				<!-- Two -->
 					<section id="two">
