--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 					<section id="Item skills">
 						<header class="major">
 							<h2>Skills</h2></header>
-							<ui style="list-style-type:square"><ol>Solaris</ol>
-							<ol>Windows</ol>
+							<ui style="list-style-type:square">
+							<li>Solaris</li>
+							<li>Windows</li>
 							<ol>Mac</ol>
 							<ol>Visio</ol>
 							<ol>Splunk</ol>
