--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 							<ui style="list-style-type:square">
 							<li>Solaris</li>
 							<li>Windows</li>
-							<ol>Mac</ol>
-							<ol>Visio</ol>
-							<ol>Splunk</ol>
-							<ol>SQL</ol>
-							<ol>RegEx</ol>
-							<ol>VoIP</ol>
-							<ol>Sip</ol>
-							<ol>HTTP</ol>
-							<ol>Confluence</ol>
-							<ol>Jira</ol>
-							<ol>Bash</ol>
-							<ol>Python</ol>
-							<ol>IP</ol></ui>
+							<li>Mac</li>
+							<li>Visio</li>
+							<li>Splunk</li>
+							<li>SQL</li>
+							<li>RegEx</li>
+							<li>VoIP</li>
+							<li>Sip</li>
+							<li>HTTP</li>
+							<li>Confluence</li>
+							<li>Jira</li>
+							<li>Bash</li>
+							<li>Python</li>
+							<li>IP</li></ui>
 					</section>
 				<!-- Two -->
 					<section id="two">
