--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- skills -->
 					<section id="Item skills">
 						<header class="major">
-							<h2>Skills</h2></header>
+							<h2><b>Skills</h2></header>
 							<ui style="list-style-type:square">
 							<li>Solaris</li>
 							<li>Windows</li>
@@ -51,7 +51,7 @@
 							<li>Jira</li>
 							<li>Bash</li>
 							<li>Python</li>
-							<li>IP</li></ui>
+							<li>IP</li></b></ui>
 					</section>
 				<!-- Two -->
 					<section id="two">
