--- a/index.html
+++ b/index.html
@@ -99,13 +99,10 @@
 								<!-- <a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a> -->
 								<h2>Global Crossing 2000-2010</h2>
 								<h3>Collaboration Sales Engineer</h3>
-								<p>Primary engineering point of contact for all western and central region’s outside sales people</p>
 								<p>Primary engineering point of contact for all western and central region collaboration accounts,
 									totaling more than $50M in annual revenue</p>
 								<p>Attended prospect/review meetings with corporate decision makers and act as the SME for our
-									collaboration products and the collaboration industry as a whole</p>
-								<p>Facilitator of customer technical requests to product and development teams</p>
-								<p>Beta user for all new features of any collaboration product</p>
+									collaboration products</p>
 								<br>
 								<h3>Collaboration Network Engineer</h3>
 								<p>Primary engineer for our new Pactolus event conferencing system. This new platform integrated
