--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
 									collaboration products</p>
 								<br>
 								<h3>Collaboration Network Engineer</h3>
-								<p>Primary engineer for our new Pactolus event conferencing system. This new platform integrated
-									TDM, VoIP, SIP, Java, XML, SOAP, and Oracle technologies</p>
+								<p>Primary engineer for event conferencing platform. This platform integrated TDM, VoIP, SIP, Java, XML, SOAP, and Oracle technologies</p>
 								<p>Responsible for forward looking, revenue generating projects</p>
 								<p>Third level support of all technical staff</p>
 								<p>Re-wrote all testing and implementation procedures, including all technical service documents,
