--- a/index.html
+++ b/index.html
@@ -108,14 +108,10 @@
 								<p>Primary engineer for event conferencing platform. This platform integrated TDM, VoIP, SIP, Java, XML, SOAP, and Oracle technologies</p>
 								<p>Responsible for forward looking, revenue generating projects</p>
 								<p>Third level support of all technical staff</p>
-								<p>Re-wrote all testing and implementation procedures, including all technical service documents,
-									method of procedures, and regression test plans</p>
 								<br>	
 								<h3>Network Operations Technician</h3>
 								<p>Extensive SS7, ISDN, and robbed bit telephony network troubleshooting</p>
-								<p>Tier 3 support of world-wide audio conferencing platforms</p>
-								<p>Tier 3 support of server and database infrastructure</p>
-								<p>Tier 3 support of telephony switching equipment</p>
+								<p>Tier 3 support of world-wide audio conferencing platforms, servers, database, and telephony switching infrastructure</p>
 							</article>
 						</div>
 					</section>
