--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="https://www.linkedin.com/in/darrell-bare-78b16147/"><span class="label">Linkedin</span></a></li>
+						<li><a href="#" class="fa fa-linkedin-square"><span class="https://www.linkedin.com/in/darrell-bare-78b16147/">Linkedin</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
