--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<a id=getintouch><section id="three">
 						<h2>Get In Touch</h2>
 						<p>Please feel free to contact me.</p>
 						<div class="row">
@@ -152,7 +152,7 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					</section></a>
 
 				<!-- Four -->
 				<!--
