--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 					</section>
 
 				<!-- Three -->
-					<a id="getintouch"><section id="three">
-						<h2>Get In Touch</h2>
+					<section id="three">
+						<h2 id="#getintouch">Get In Touch</h2>
 						<p>Please feel free to contact me.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
@@ -152,7 +152,7 @@
 								</ul>
 							</div>
 						</div>
-					</section></a>
+					</section>
 
 				<!-- Four -->
 				<!--
@@ -488,7 +488,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/darrell-bare-78b16147/" class="fab fa-linkedin"></span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="getintouch">getintouch</a></li>
+						<li><a href="#getintouch">getintouch</a></li>
 					</ul>
 				</div>
 			</footer>
