--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/darrell-bare-78b16147/" class="fab fa-linkedin"></span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="#getintouch" class="icon solid fa-envelope"><span class="label"></span></a></li>
+						<li><a href="#getintouch" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</footer>
