--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2 id="#getintouch">Get In Touch</h2>
+						<h2 id="getintouch">Get In Touch</h2>
 						<p>Please feel free to contact me.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
