--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 						<header class="major">
 							<h2><b>Skills</h2></header>
 							<ui style="list-style-type:square">
+							<li>Linux</li>
 							<li>Solaris</li>
 							<li>Windows</li>
 							<li>Mac</li>
