--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<p>Please feel free to contact me.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="mailto:darrell.bare@gmail.com" method="post" enctype="text/plain">
+								<form method="post" action="mailto:darrell.bare@gmail.com" method="post">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
