--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<!-- <a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a> -->
 								<h2>Six Actual Software 2015-2016</h2>
 								<h3>Software Solutions Engineer</h3>
-								<p>Agile product owner for a "new to the undustry" application</p>
+								<p>Agile product owner for a "new to the industry" application</p>
 								<p>Gathered all requirements, wrote user stories and drove them to completion</p>
 								<p>Managed budge, hours, and burn down for the multi-million dollar project</p>
 							</article>
@@ -120,7 +120,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2 id="getintouch">Get In Touch</h2>
-						<p>Please feel free to contact me.</p>
+						<p>Please feel free to contact me</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
