--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/IMG_2444.JPG" width="300" height="150" alt="" /></a>
+					<p class="image avatar"><img src="images/IMG_2444.JPG" width="300" height="150" alt="" /></p>
 					<h1><strong>Darrell Bare</strong></h1>
 				</div>
 			</header>
