--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-<<<<<<< HEAD
-					<p class="image avatar"><img src="images/IMG_2444.JPG" width="300" height="150" alt="" /></p>
-=======
-					<a class="image avatar"><img src="images/IMG_2444.JPG" width="300" height="150" alt="" /></a>
->>>>>>> ac2246db699a40e5d84ffeea8d86feea10db0afc
+					<a href="#" class="image avatar"><img src="images/IMG_2444.JPG" width="300" height="150" alt="" /></p>
 					<h1><strong>Darrell Bare</strong></h1>
 				</div>
 			</header>
