--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="http://www.linkedin.com/in/darrell-bare-78b16147" class="image avatar"><img src="images/IMG_2444.JPG" alt="" /></p>
+					<a href="http://www.linkedin.com/in/darrell-bare-78b16147" class="image avatar"><img src="images/IMG_2444.JPG" alt="" /></a>
 					<h1><strong>Darrell Bare</strong></h1>
 				</div>
 			</header>
