--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<!-- <a href="#">darrell.bare@gmail.com</a> -->
+										<a href="#">darrell.bare@gmail.com</a>
 									</li>
 								</ul>
 							</div>
