--- a/index.html
+++ b/index.html
@@ -117,6 +117,29 @@
 						</div>
 					</section>
 
+				<!-- Education -->
+				<section id="Education">
+					<header class="major">
+						<h2><b>Skills</h2></header>
+						<ui style="list-style-type:square">
+						<li>Linux</li>
+						<li>Solaris</li>
+						<li>Windows</li>
+						<li>Mac</li>
+						<li>Visio</li>
+						<li>Splunk</li>
+						<li>SQL</li>
+						<li>RegEx</li>
+						<li>VoIP</li>
+						<li>Sip</li>
+						<li>HTTP</li>
+						<li>Confluence</li>
+						<li>Jira</li>
+						<li>Bash</li>
+						<li>Python</li>
+						<li>IP</li></b></ui>
+				</section>
+
 				<!-- Three -->
 					<section id="three">
 						<h2 id="getintouch">Get In Touch</h2>
