--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
 				<!-- Education -->
 				<section id="Education">
 					<header class="major">
-						<h2><b>Skills</h2></header>
+						<h2><b>Education</h2></header>
 						<ui style="list-style-type:square">
 						<li>Linux</li>
 						<li>Solaris</li>
 						<li>Windows</li>
 						<li>Mac</li>
 						<li>Visio</li>
+						<br>
 				
 				</section>
 
