--- a/index.html
+++ b/index.html
@@ -310,6 +310,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<td>29.99</td>
 										</tr>
 										<tr>
+											<td>Item Education>
+											<td colspan='1'></td>
+											<td>Education</td>
+											<td>29.99>
+										</tr>
+										<tr>
 											<td>Item Four</td>
 											<td>Vitae integer tempus condimentum.</td>
 											<td>19.99</td>
