--- a/index.html
+++ b/index.html
@@ -122,11 +122,10 @@
 					<header class="major">
 						<h2><b>Education</h2></header>
 						<ui style="list-style-type:square">
-						<li>Linux</li>
-						<li>Solaris</li>
-						<li>Windows</li>
-						<li>Mac</li>
-						<li>Visio</li>
+						<li>University of Phoenix - Less than a year remaining in a Cybersecurity Associates of Science degree</li>
+						<li>Front Range Community College - Solaris 9 Certification</li>
+						<li>Community College of Denver - (CCNA) Cisco Certified Network Associate</li>
+						<li>SUN Microsystems - Solaris 8 Certification</li>
 						<br>
 				
 				</section>
