--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<div class="inner">
 					<a href="http://www.linkedin.com/in/darrell-bare-78b16147" class="image avatar"><img src="images/IMG_2444.JPG" alt="" /></a>
 					<h1><strong>Darrell Bare</strong></h1>
+					<h1>IT Systems Engineer</h1>
 				</div>
 			</header>
 
