--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<!-- Education -->
 				<section id="Education">
 					<header class="major">
-						<h2><b>Education</h2></header>
+						<h2><b>Education</b></h2></header>
 						<ui style="list-style-type:square">
 						<li>University of Phoenix - Less than a year remaining in a Cybersecurity Associates of Science degree</li>
 						<li>Front Range Community College - Solaris 9 Certification</li>
