--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 						<div class="column">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/Lumen-logo-R.svg" class="image fit thumb"><img src="images/Lumen-logo-R.svg" alt="" /></a> -->
+								<h2><b>Experience</b></h2></header>
 								<h2>Lumen 2016-Present</h2>
 								<h3>Senior CDN Operations Engineer</h3>
 								<p>Tested and managed rollout of all new code releases</p>
