--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- skills -->
 					<section id="Item skills">
 						<header class="major">
-							<h2><b>Skills</h2></header>
+							<h2><b>Skills:</h2></header>
 							<ui style="list-style-type:square">
 							<li>Linux</li>
 							<li>Solaris</li>
@@ -60,7 +60,7 @@
 						<div class="column">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/Lumen-logo-R.svg" class="image fit thumb"><img src="images/Lumen-logo-R.svg" alt="" /></a> -->
-								<h2><b>Experience</b></h2></header>
+								<h2><b>Experience:</b></h2></header>
 								<h2>Lumen 2016-Present</h2>
 								<h3>Senior CDN Operations Engineer</h3>
 								<p>Tested and managed rollout of all new code releases</p>
@@ -122,7 +122,7 @@
 				<!-- Education -->
 				<section id="Education">
 					<header class="major">
-						<h2><b>Education</b></h2></header>
+						<h2><b>Education:</b></h2></header>
 						<ui style="list-style-type:square">
 						<li>University of Phoenix - Less than a year remaining in a Cybersecurity Associates of Science degree</li>
 						<li>Front Range Community College - Solaris 9 Certification</li>
