--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">darrell.bare@gmail.com</a>
+										darrell.bare@gmail.com
 									</li>
 								</ul>
 							</div>
