--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/darrell-bare-78b16147/" class="fab fa-linkedin"></span></a></li>
+						<li><a href="https://www.linkedin.com/in/darrell-bare-78b16147/" target="_blank" class="fab fa-linkedin"></span></a></li>
 						<li><a href="#getintouch" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
