--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<!-- <a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
 								<h2>Level 3 Communications 2012-2015</h2>
 								<h3>Operations Engineer</h3>
-								<p>Led operational integration effors for all collaboarion products into the Level 3 workflows</p>
+								<p>Led operational integration effors for all collaboration products into the Level 3 workflows</p>
 								<p>Managed all production traffic for $180M in collaboration revenue</p>
 								<p>Lead Splunk implementation engineer</p>
 							</article>
