--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 								<h3>Software Solutions Engineer</h3>
 								<p>Agile product owner for a "new to the industry" application</p>
 								<p>Gathered all requirements, wrote user stories and drove them to completion</p>
-								<p>Managed budge, hours, and burn down for the multi-million dollar project</p>
+								<p>Managed budget, hours, and burn down for the multi-million dollar project</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
 								<h2>Level 3 Communications 2012-2015</h2>
 								<h3>Operations Engineer</h3>
-								<p>Led operational integration effors for all collaboration products into the Level 3 workflows</p>
+								<p>Led operational integration efforts for all collaboration products into the Level 3 workflows</p>
 								<p>Managed all production traffic for $180M in collaboration revenue</p>
 								<p>Lead Splunk implementation engineer</p>
 							</article>
@@ -114,7 +114,7 @@
 								<br>	
 								<h3>Network Operations Technician</h3>
 								<p>Extensive SS7, ISDN, and robbed bit telephony network troubleshooting</p>
-								<p>Tier 3 support of world-wide audio conferencing platforms, servers, database, and telephony switching infrastructure</p>
+								<p>Tier 3 support of world-wide audio conferencing platforms, servers, databases, and telephony switching infrastructure</p>
 							</article>
 						</div>
 					</section>
