--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Highly motivated, creative and versatile IT engineer with over 23 years' experience in detail oriented positions.<br />
+							<h2>Highly motivated, creative and versatile IT engineer with experience in detail oriented positions.<br />
 							</h2>
 						</header>
 						<p>Proven track record of delivering on-time, quality and professional results, including managing complex networks and multi-million dollar accounts.  Strengths include troubleshooting, documentation, and communication.</p>
