--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 								<p>Tested and managed rollout of all new code releases</p>
 								<p>Maintained operational functionality of 20,000+ Linux servers</p>
 								<p>Tier 3 support for internal and external customers</p>
+								<p>Liason between operations team and engineering, development, planning, sales, and management teams</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a> -->
