--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 								<p>Led operational integration efforts for all collaboration products into the Level 3 workflows</p>
 								<p>Managed all production traffic for $180M in collaboration revenue</p>
 								<p>Lead Splunk implementation engineer</p>
+								<p>Tier 3 support for worldwide data and telecommunications networks</p>
+								<p>Tier 3 interface for vendor technologies, including software releases and co-locations</p>
 							</article>
 						</div>
 					</section>
