--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							</h2>
 						</header>
 						<p>Proven track record of delivering on-time, quality and professional results, including managing complex networks and multi-million dollar accounts.  Strengths include troubleshooting, documentation, and communication.</p>
+						<p>2022 quarterly operational excellence award winner</p>
 					</section>
 				<!-- skills -->
 					<section id="Item skills">
