--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						</header>
 						<p>Proven track record of delivering on-time, quality and professional results, including managing complex networks and multi-million dollar accounts.  Strengths include troubleshooting, documentation, and communication.</p>
 						<p>2022 quarterly operational excellence award winner</p>
+						<p>Excellent capacity to work in a fast paced environment and multi-task on technically complex tasks</p>
 					</section>
 				<!-- skills -->
 					<section id="Item skills">
