--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						</header>
 						<p>Proven track record of delivering on-time, quality and professional results, including managing complex networks and multi-million dollar accounts.  Strengths include troubleshooting, documentation, and communication.</p>
 						<p>2022 quarterly operational excellence award winner</p>
-						<p>Excellent capacity to work in a fast paced environment and multi-task on technically complex tasks</p>
+						<p>Excellent capacity to work in a fast paced environment and multi-task on technically complex solutions</p>
 						<p>Proven track record of collaboration between upstream and downstream organizations</p>
 						<p>I always strive to become a subject matter expert in any role I play</p>
 					</section>
