--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<h1><b>Experience:</b></h1></header>
 								<h2>Lumen 2016-Present</h2>
 								<h3>Senior CDN Operations Engineer</h3>
-								<p>Tested and managed rollout of all new code releases</p>
+								<p>Operational lead for testing and production management of all new code releases</p>
 								<p>Maintained operational functionality of 20,000+ Linux servers</p>
 								<p>Tier 3 support for internal and external customers</p>
 								<p>Liason between operations team and engineering, development, planning, sales, and management teams</p>
