--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
 					<header class="major">
 						<h2><b>Education:</b></h2></header>
 						<ui style="list-style-type:square">
+						<li>CompTIA - Linux+ certification</li>
 						<li>CompTIA - Network+ certification</li>
+						<li>CompTIA - Linux Network Professional+ certification</li>
 						<li>University of Phoenix - Less than a year remaining in a Cybersecurity Associates of Science degree</li>
 						<li>Front Range Community College - Solaris 9 Certification</li>
 						<li>Community College of Denver - (CCNA) Cisco Certified Network Associate</li>
